<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newbie_slide_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_color_rectangle"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.phone4me.NewbieActivity">

    <TextView
        android:id="@+id/newbie_intro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:text="@string/newbie_intro"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/newbie_intro_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newbie_intro_text"
        android:paddingTop="30dp"
        android:text="@string/newbie_intro_2"
        android:textColor="@color/white"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/newbie_intro_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newbie_intro_text2"
        android:paddingTop="30dp"
        android:text="@string/newbie_intro_3"
        android:textColor="@color/white"
        android:textSize="19sp" />

    <Button
        android:id="@+id/newbie_slide_1_next_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/ic_send_white_24dp" />


</RelativeLayout>
